Refactor docker-compose.yml to use Docker Hub images

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,12 @@
 # version: "3.8"
 services:
   frontend:
-    build:
-      context: ./client
-      dockerfile: Dockerfile
+    image: tinegagideon/yolo-frontend:1.0.0
     ports:
       - "3000:3000"
 
   backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
+    image: tinegagideon/yolo-backend:1.0.0
     environment:
       - MONGODB_URI=mongodb://mongodb:27017
     ports:
