Update dockerfile for multi-stage build of frontend application

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,10 +1,11 @@
-# Use an existing image as a base
-FROM node:22-alpine3.18
+# STAGE 1 : Building App
+
+FROM node:22-alpine3.18 as builder
 
 # Set the working directory
 WORKDIR /yolo-frontend
 
-# Copy the package.json and package-lock.json files
+# Copy the package.json file
 COPY package*.json /yolo-frontend
 
 # Install the dependencies
@@ -13,8 +14,18 @@ RUN npm install
 # Copy the rest of the code
 COPY . .
 
-# Expose the port that the app listens on
-EXPOSE 3000
+# Run the build script defined in package.json.
+RUN npm run build
 
-# Define the command to run the app
-CMD ["npm", "start"]
+# STAGE 2: Create the production image
+
+FROM nginx:latest
+
+# Copy the static content from the build directory of the first stage to the appropriate directory in the Nginx container.
+COPY --from=builder /yolo-frontend/build /usr/share/nginx/html
+
+# Expose port 80 on the container
+EXPOSE 80
+
+# Start Nginx in the foreground
+CMD ["nginx", "-g", "daemon off;"]
