feat: Abstract API base URL
-  Update ProductControl.js to retrieve the base URL from environment variables.
- add environment variable to docker-compose.yaml for backend url
- and env to client.yaml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       - "80:80"
     networks:
       - frontend
+    environment:
+      - API_BASE_URL=http://backend:5000
 
   backend:
     image: tinegagideon/yolo-backend:1.0.0
